fix z-indexes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@ a{
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 103;
+  z-index: 3;
 
   &__inner {
     position: relative;
@@ -101,7 +101,7 @@ a{
       padding-bottom: 7px;
       width: 214px;
       margin-left: 100px;
-      z-index: 103;
+      z-index: 3;
       position: relative;
     }
   }
@@ -126,7 +126,7 @@ a{
     li {
       button {
         margin-left: calc(20px + (480 - 20) * ((100vw - 760px) / (1440 - 760)));
-        z-index: 103;
+
       }
     }
   }
@@ -279,7 +279,7 @@ a{
           letter-spacing: 1px;
           color: #ffffff;
           position: absolute;
-          z-index: 150;
+          z-index: 2;
         }
 
         .main-block__text {
@@ -292,7 +292,7 @@ a{
           color: #e5e5e5;
           width: calc(280px + (640 - 280) * ((100vw - 320px) / (1440 - 320)));
           padding-top: calc(224px + (325 - 224) * ((100vw - 320px) / (1440 - 320)));
-          z-index: 150;
+          z-index: 2;
           position: relative;
         }
       }
@@ -300,7 +300,7 @@ a{
 
     .main-block__img {
       width: calc(320px + (792 - 320) * ((100vw - 320px) / (1440 - 320)));
-      z-index: 2;
+      z-index: 1;
       .circle {
         width: calc(320px + (792 - 320) * ((100vw - 320px) / (1440 - 320)));
         position: absolute;
@@ -311,7 +311,7 @@ a{
         top: calc(190px + (478 - 190) * ((100vw - 320px) / (1440 - 320)));
         right: calc(0px + (512 - 0) * ((100vw - 320px) / (1440 - 320)));
         width: calc(60px + (150 - 60) * ((100vw - 320px) / (1440 - 320)));
-        z-index: 2;
+        z-index: 1;
       }
       .square1{
         width: calc(60px + (145 - 60) * ((100vw - 320px) / (1440 - 320)));
